# tree-sitter-blade

./: .all-contributorsrc  .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  LICENSE  Makefile  Package.resolved  Package.swift  README.md  binding.gyp  deno.json  eslint.config.js  eslint.config.mjs  example-file  example-file.blade  example-file.blade.php  example.blade.php  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  lint.yml
bindings/c/: tree-sitter-blade.pc.in
bindings/go/: binding.go  binding_test.go  blade_test.go
bindings/node/: binding.cc  binding_test.cjs  index.cjs  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
corpus/: attributes.txt  comment.txt  conditionals.txt  conflicts.txt  envoy.txt  if-statements.txt  inline-directives.txt  keywords.txt  livewire.txt  loops.txt  nested-directives.txt  php-statements.txt  stacks.txt  switch-statements.txt
main/: NodeMap.ts  NodeSet.ts  bundle.ts  grammar.ts
main/tests/: NodeMap_test.ts
queries/: folds.scm  highlights.scm  injections.scm
script/: known-failures.txt  parse-breeze  parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h
test/corpus/: attributes.txt  comment.txt  components.txt  conditionals.txt  conflicts.txt  envoy.txt  html-blade.txt  inline-directives.txt  keywords.txt  livewire.txt  loops.txt  nested-directives.txt  php-statements.txt  stacks.txt  switch-statements.txt
(+5 files in other folders)
